# containers_ADT

./: CMakeLists.txt  README.md
dycont/: dycont.cpp  dycont.h  main_dycont.cpp
list/: list.cpp  list.h  main_list.cpp
new_own_classes/: Adam_time.h  data_time.h  new_integer.cpp  new_integer.h
queue/: main_queue.cpp  queue.cpp  queue.h
stack/: main_stack.cpp  stack.cpp  stack.h
tree/: main_tree.cpp  tree.cpp  tree.h
